--- a/custom_components/blueprint_studio/panels/panel_custom.html
+++ b/custom_components/blueprint_studio/panels/panel_custom.html
@@ -339,6 +339,7 @@
       overflow-x: hidden;
       padding: 4px 0;
       -webkit-overflow-scrolling: touch;
+      touch-action: pan-y;
     }
 
     .tree-item {
@@ -352,6 +353,7 @@
       transition: background 0.1s;
       min-height: 40px;
       position: relative;
+      touch-action: manipulation;
     }
 
     .tree-item:hover, .tree-item:active {
