--- a/custom_components/blueprint_studio/panels/panel_custom.html
+++ b/custom_components/blueprint_studio/panels/panel_custom.html
@@ -3080,6 +3080,10 @@
             <span class="shortcut-desc">Search in file</span>
           </div>
           <div class="shortcut-item">
+            <span class="shortcut-keys"><kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>F</kbd></span>
+            <span class="shortcut-desc">Search in all files</span>
+          </div>
+          <div class="shortcut-item">
             <span class="shortcut-keys"><kbd>Ctrl/Cmd</kbd> + <kbd>H</kbd></span>
             <span class="shortcut-desc">Find and replace</span>
           </div>
@@ -3124,6 +3128,6 @@
     </div>
   </div>
 
-  <script src="/local/blueprint_studio/www/blueprint_studio.js?v=1.3.2"></script>
-</body>
-</html>
+      <script src="/local/blueprint_studio/www/blueprint_studio.js?v=1.4.0"></script>
+  </body>
+  </html>
