--- a/custom_components/blueprint_studio/panels/panel_custom.html
+++ b/custom_components/blueprint_studio/panels/panel_custom.html
@@ -58,8 +58,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/addon/mode/overlay.min.js"></script>
 
   <style>
-    /* Dark theme (default) */
-    :root, [data-theme="dark"] {
+    /* Theme variables will be set dynamically via JavaScript */
+    :root {
       --bg-primary: #1e1e1e;
       --bg-secondary: #252526;
       --bg-tertiary: #2d2d30;
@@ -88,32 +88,53 @@
       --safe-area-bottom: env(safe-area-inset-bottom, 0px);
     }
 
-    /* Light theme */
+    /* Light theme override - will be applied by JS */
     [data-theme="light"] {
-      --bg-primary: #ffffff;
-      --bg-secondary: #f3f3f3;
-      --bg-tertiary: #e8e8e8;
-      --bg-hover: #e0e0e0;
-      --bg-active: #0060c0;
-      --text-primary: #1e1e1e;
-      --text-secondary: #616161;
-      --text-muted: #9e9e9e;
-      --border-color: #d4d4d4;
-      --accent-color: #0066b8;
-      --accent-hover: #0078d4;
-      --success-color: #16825d;
-      --warning-color: #bf8803;
-      --error-color: #e51400;
-      --icon-folder: #c09553;
-      --icon-yaml: #a83232;
-      --icon-json: #b89500;
-      --icon-python: #2b5b84;
-      --icon-js: #b8a000;
-      --icon-default: #616161;
-      --modal-bg: #ffffff;
-      --input-bg: #ffffff;
-      --shadow-color: rgba(0, 0, 0, 0.2);
-      --cm-theme: default;
+      /* Variables will be set by JavaScript */
+    }
+
+    /* File Tree Compact Mode */
+    body.file-tree-compact .tree-item {
+      padding: 4px 8px;
+      min-height: 28px;
+    }
+
+    body.file-tree-compact .tree-icon {
+      width: 20px;
+      height: 20px;
+    }
+
+    body.file-tree-compact .tree-icon .material-icons {
+      font-size: 16px;
+    }
+
+    body.file-tree-compact .tree-name {
+      font-size: 13px;
+    }
+
+    /* File Tree No Icons */
+    body.file-tree-no-icons .tree-icon {
+      display: none;
+    }
+
+    /* Tab Position Left */
+    body[data-tab-position="left"] .tabs-container {
+      flex-direction: column;
+      width: 150px;
+      height: 100%;
+      border-right: 1px solid var(--border-color);
+      border-bottom: none;
+    }
+
+    body[data-tab-position="left"] .editor-area {
+      flex-direction: row;
+    }
+
+    body[data-tab-position="left"] .tab {
+      border-right: none;
+      border-bottom: 1px solid var(--border-color);
+      min-width: unset;
+      max-width: unset;
     }
 
     * {
@@ -446,6 +467,164 @@
       color: var(--text-primary);
       font-size: 14px;
       outline: none;
+    }
+
+    /* AI Sidebar */
+    .ai-sidebar {
+      width: 350px;
+      min-width: 250px;
+      max-width: 80vw;
+      background: var(--bg-secondary);
+      border-left: 1px solid var(--border-color);
+      display: flex;
+      flex-direction: column;
+      flex-shrink: 0;
+      z-index: 100;
+      transition: transform 0.3s ease;
+    }
+
+    .ai-sidebar.hidden {
+      display: none;
+    }
+
+    .ai-content {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    .ai-chat-messages {
+      flex: 1;
+      overflow-y: auto;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
+
+    .ai-message {
+      padding: 10px 14px;
+      border-radius: 8px;
+      font-size: 14px;
+      line-height: 1.4;
+      max-width: 90%;
+      word-wrap: break-word;
+    }
+
+    .ai-message-assistant {
+      align-self: flex-start;
+      background: var(--bg-tertiary);
+      color: var(--text-primary);
+      border: 1px solid var(--border-color);
+    }
+
+    .ai-message-user {
+      align-self: flex-end;
+      background: var(--accent-color);
+      color: white;
+    }
+
+    .ai-input-container {
+      padding: 12px;
+      border-top: 1px solid var(--border-color);
+      display: flex;
+      gap: 8px;
+      background: var(--bg-secondary);
+    }
+
+    #ai-chat-input {
+      flex: 1;
+      background: var(--bg-primary);
+      border: 1px solid var(--border-color);
+      border-radius: 4px;
+      color: var(--text-primary);
+      padding: 8px 12px;
+      font-size: 14px;
+      resize: none;
+      height: 40px;
+      outline: none;
+      font-family: inherit;
+    }
+
+    #ai-chat-input:focus {
+      border-color: var(--accent-color);
+    }
+
+    #btn-ai-send {
+      background: var(--accent-color);
+      color: white;
+      border: none;
+      border-radius: 4px;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+    }
+
+    #btn-ai-send:hover {
+      background: var(--accent-hover);
+    }
+
+    .ai-code-block {
+      position: relative;
+      background: var(--bg-primary);
+      border: 1px solid var(--border-color);
+      border-radius: 6px;
+      margin: 8px 0;
+      padding: 12px;
+      overflow: hidden;
+    }
+
+    .ai-code-block pre {
+      margin: 0;
+      font-family: 'Fira Code', 'Cascadia Code', monospace;
+      font-size: 13px;
+      overflow-x: auto;
+    }
+
+    .ai-copy-btn {
+      position: absolute;
+      top: 4px;
+      right: 4px;
+      background: var(--bg-tertiary);
+      border: 1px solid var(--border-color);
+      color: var(--text-secondary);
+      border-radius: 4px;
+      padding: 4px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      transition: opacity 0.2s, color 0.2s;
+    }
+
+    .ai-code-block:hover .ai-copy-btn {
+      opacity: 1;
+    }
+
+    .ai-copy-btn:hover {
+      color: var(--text-primary);
+      background: var(--bg-hover);
+    }
+
+    .ai-copy-btn .material-icons {
+      font-size: 16px;
+    }
+
+    .ai-loading {
+      display: inline-block;
+      animation: pulse 1.5s infinite;
+    }
+
+    @keyframes pulse {
+      0% { opacity: 0.4; }
+      50% { opacity: 1; }
+      100% { opacity: 0.4; }
     }
 
     .search-input:focus {
@@ -824,8 +1003,20 @@
     }
 
     .CodeMirror-linenumber {
-      color: var(--text-muted);
+      color: var(--cm-line-number-color, var(--text-muted)) !important;
       padding: 0 8px;
+    }
+
+    .CodeMirror-foldmarker,
+    .CodeMirror-foldgutter-open,
+    .CodeMirror-foldgutter-folded {
+      color: var(--cm-fold-color, var(--text-muted)) !important;
+      cursor: pointer;
+      font-size: 1.4em; /* Relative to editor font size */
+      line-height: 1;
+      width: 1.2em;
+      display: inline-block;
+      text-align: center;
     }
 
     .CodeMirror-activeline-background {
@@ -944,6 +1135,37 @@
 
     [data-theme="light"] .cm-ha-key {
       color: #2e7d32;
+    }
+
+    /* Jinja Syntax Highlighting */
+    .cm-jinja-bracket {
+      color: #ffd700; /* Gold */
+      font-weight: bold;
+    }
+    [data-theme="light"] .cm-jinja-bracket {
+      color: #f57f17; /* Darker Orange */
+    }
+
+    .cm-jinja-keyword {
+      color: #ff9e64; /* Orange/Peach */
+      font-weight: bold;
+    }
+    [data-theme="light"] .cm-jinja-keyword {
+      color: #e65100; /* Deep Orange */
+    }
+    
+    .cm-jinja-operator {
+      color: #89ddff; /* Light Blue */
+    }
+    [data-theme="light"] .cm-jinja-operator {
+      color: #0277bd; /* Ocean Blue */
+    }
+    
+    .cm-jinja-atom {
+      color: #f78c6c; /* Coral */
+    }
+    [data-theme="light"] .cm-jinja-atom {
+      color: #bf360c;
     }
 
     /* Welcome screen */
@@ -1296,7 +1518,7 @@
       bottom: calc(40px + var(--safe-area-bottom));
       left: 50%;
       transform: translateX(-50%);
-      z-index: 1000;
+      z-index: 10005; /* Above modals (10000) and context menus (10002) */
       width: 90%;
       max-width: 400px;
     }
@@ -1610,6 +1832,141 @@
         padding: 10px;
         align-items: center; /* Ensure vertical centering */
       }
+    }
+
+    /* Toggle Switch */
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 44px;
+      height: 24px;
+    }
+
+    .toggle-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .toggle-slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: var(--bg-tertiary);
+      transition: .3s;
+      border-radius: 24px;
+      border: 1px solid var(--border-color);
+    }
+
+    .toggle-slider:before {
+      position: absolute;
+      content: "";
+      height: 18px;
+      width: 18px;
+      left: 2px;
+      bottom: 2px;
+      background-color: var(--text-primary);
+      transition: .3s;
+      border-radius: 50%;
+    }
+
+    input:checked + .toggle-slider {
+      background-color: var(--accent-color);
+      border-color: var(--accent-color);
+    }
+
+    input:checked + .toggle-slider:before {
+      transform: translateX(20px);
+      background-color: white;
+    }
+
+    /* Settings Tabs */
+    .settings-tabs {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+
+    .settings-tabs::-webkit-scrollbar {
+      height: 2px;
+    }
+
+    .settings-tabs::-webkit-scrollbar-thumb {
+      background: var(--border-color);
+    }
+
+    .settings-tab {
+      white-space: nowrap;
+      transition: all 0.2s;
+    }
+
+    .settings-tab:hover {
+      background: var(--bg-hover);
+    }
+
+    /* Git Settings Input */
+    .git-settings-input {
+      padding: 8px 12px;
+      background: var(--input-bg);
+      border: 1px solid var(--border-color);
+      border-radius: 4px;
+      color: var(--text-primary);
+      font-size: 14px;
+      outline: none;
+      transition: border-color 0.2s;
+    }
+
+    .git-settings-input:focus {
+      border-color: var(--accent-color);
+    }
+
+    .git-settings-section {
+      margin-bottom: 20px;
+    }
+
+    .git-settings-label {
+      font-size: 11px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      color: var(--text-secondary);
+      margin-bottom: 12px;
+    }
+
+    /* Range Slider */
+    input[type="range"] {
+      -webkit-appearance: none;
+      appearance: none;
+      height: 6px;
+      background: var(--border-color);
+      border-radius: 3px;
+      outline: none;
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 18px;
+      height: 18px;
+      background: var(--accent-color);
+      border-radius: 50%;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+
+    input[type="range"]::-webkit-slider-thumb:hover {
+      background: var(--accent-hover);
+    }
+
+    input[type="range"]::-moz-range-thumb {
+      width: 18px;
+      height: 18px;
+      background: var(--accent-color);
+      border-radius: 50%;
+      cursor: pointer;
+      border: none;
     }
 
     /* iOS safe areas */
@@ -2876,6 +3233,9 @@
       <button class="toolbar-btn" id="btn-shortcuts-help" title="Keyboard Shortcuts (?)">
         <span class="material-icons">keyboard</span>
       </button>
+      <button class="toolbar-btn" id="btn-ai-studio" title="AI Studio Copilot" style="display: none;">
+        <span class="material-icons" style="color: #9c27b0;">psychology</span>
+      </button>
       <button class="toolbar-btn" id="btn-restart-ha" title="Restart Home Assistant">
         <span class="material-icons" style="color: #3ea589;">restart_alt</span>
       </button>
@@ -2923,8 +3283,11 @@
           </button>
         </div>
       </div>
-      <div class="search-container">
-        <input type="text" class="search-input" id="file-search" placeholder="Search files..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
+      <div class="search-container" style="display: flex; gap: 8px;">
+        <input type="text" class="search-input" id="file-search" placeholder="Search files..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" style="flex: 1;">
+        <button id="btn-content-search" title="Match File Content" style="width: 32px; height: 32px; border-radius: 4px; border: 1px solid var(--border-color); background: var(--bg-tertiary); color: var(--text-secondary); display: flex; align-items: center; justify-content: center; cursor: pointer;">
+            <span class="material-icons" style="font-size: 18px;">text_snippet</span>
+        </button>
       </div>
       <div class="selection-toolbar" id="selection-toolbar" style="display: none;">
         <span class="selection-count" id="selection-count">0 selected</span>
@@ -3050,10 +3413,40 @@
               <span class="shortcut-key">Ctrl+G</span>
               <span>Go to line</span>
             </div>
+            <div class="shortcut-item">
+              <span class="shortcut-key">Ctrl+/</span>
+              <span>Toggle comment</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- AI Sidebar -->
+    <div class="ai-sidebar hidden" id="ai-sidebar">
+      <div class="sidebar-header">
+        <span>AI Studio Copilot</span>
+        <div class="sidebar-header-actions">
+          <button class="sidebar-header-btn" id="btn-close-ai" title="Close">
+            <span class="material-icons">close</span>
+          </button>
+        </div>
+      </div>
+      <div class="ai-content">
+        <div class="ai-chat-messages" id="ai-chat-messages">
+          <div class="ai-message ai-message-assistant">
+            Hello! I'm your AI Copilot. I can help you generate automations, fix YAML errors, or explain Home Assistant configurations. How can I help you today?
+          </div>
+        </div>
+        <div class="ai-input-container">
+          <textarea id="ai-chat-input" placeholder="Ask anything..."></textarea>
+          <button id="btn-ai-send">
+            <span class="material-icons">send</span>
+          </button>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <!-- Status bar -->
@@ -3073,13 +3466,33 @@
       <span class="material-icons" id="theme-icon">dark_mode</span>
       <span id="theme-label">Dark</span>
       <div class="theme-menu" id="theme-menu">
+        <div class="theme-menu-item" data-theme="dark">
+          <span class="material-icons">dark_mode</span>
+          Dark
+        </div>
         <div class="theme-menu-item" data-theme="light">
           <span class="material-icons">light_mode</span>
           Light
         </div>
-        <div class="theme-menu-item" data-theme="dark">
-          <span class="material-icons">dark_mode</span>
-          Dark
+        <div class="theme-menu-item" data-theme="highContrast">
+          <span class="material-icons">contrast</span>
+          High Contrast
+        </div>
+        <div class="theme-menu-item" data-theme="solarizedDark">
+          <span class="material-icons">palette</span>
+          Solarized Dark
+        </div>
+        <div class="theme-menu-item" data-theme="solarizedLight">
+          <span class="material-icons">palette</span>
+          Solarized Light
+        </div>
+        <div class="theme-menu-item" data-theme="ocean">
+          <span class="material-icons">water</span>
+          Ocean
+        </div>
+        <div class="theme-menu-item" data-theme="dracula">
+          <span class="material-icons">nightlight_round</span>
+          Dracula
         </div>
         <div class="theme-menu-item" data-theme="auto">
           <span class="material-icons">brightness_auto</span>
@@ -3227,10 +3640,18 @@
             <span class="shortcut-keys"><kbd>Ctrl</kbd> + <kbd>Space</kbd></span>
             <span class="shortcut-desc">Autocomplete</span>
           </div>
+          <div class="shortcut-item">
+            <span class="shortcut-keys"><kbd>Ctrl/Cmd</kbd> + <kbd>Shift</kbd> + <kbd>U</kbd></span>
+            <span class="shortcut-desc">Insert UUID</span>
+          </div>
         </div>
 
         <div class="shortcuts-section">
           <h3>Navigation</h3>
+          <div class="shortcut-item">
+            <span class="shortcut-keys"><kbd>Ctrl/Cmd</kbd> + <kbd>K</kbd></span>
+            <span class="shortcut-desc">Command Palette</span>
+          </div>
           <div class="shortcut-item">
             <span class="shortcut-keys"><kbd>Ctrl/Cmd</kbd> + <kbd>E</kbd></span>
             <span class="shortcut-desc">Quick File Switcher</span>
@@ -3256,6 +3677,6 @@
     </div>
   </div>
 
-      <script src="/local/blueprint_studio/www/blueprint_studio.js?v=1.5.0"></script>
+      <script src="/local/blueprint_studio/www/blueprint_studio.js?v=2.0.0"></script>
   </body>
   </html>
